[metadata]
name = dcodex_variants
version = 1.0.0
description = An extension for DCodex to organise textual variants.
long_description = file: README.md
url = https://www.d-codex.net
author = Robert Turnbull
author_email = robert.turnbull@unimelb.edu.au
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: